# turbine-controllers

./: .gitignore  LICENSE  README.md
Bladed controller wrapper/Native controller/: 5MWBaselineWrapper_default.wrk  CMakeLists.txt  CMakePresets.json
Bladed controller wrapper/Native controller/def/: BladedControllerWrapper.def
Bladed controller wrapper/Native controller/include/: Actuator.hpp  OrcFxAPI.h  OrcFxAPIExplicitLink.h  OrcFxAPI_wrapper.hpp  Utils.hpp
Bladed controller wrapper/Native controller/src/: Actuator.cpp  ExtFn.cpp  OrcFxAPIExplicitLink.c  OrcFxAPI_wrapper.cpp  RegisterCapabilities.c  Utils.cpp
Bladed controller wrapper/Python controller/: BladedControllerWrapper.py
Individual control/: IndividualControl.py  IndividualControl_default.wrk
Python controller/: 5MWBaseline_default.wrk  PythonController.py
Ramp pitch/: RampPitch.py  RampPitch_default.wrk
Ramp torque/: RampTorque.py  RampTorque_default.wrk
Yaw control/: BladedControllerWrapper.py  DISCON.IN  YawControl_default.wrk
